--- a/test_one/news/templates/news/read_more.html
+++ b/test_one/news/templates/news/read_more.html
@@ -2,7 +2,7 @@
 
 {#   TITLE   #}
 {% block title %}
-    {{ title }} | НОВОСТИ
+    {{ news_item.title }} | {{ news_item.category }}
 {% endblock title %}
 
 {#   SIDEBAR   #}
@@ -12,13 +12,12 @@
 
 {#   CONTENT   #}
 {% block content %}
-    {% for item in news %}
     <div class="div" style="margin: 15px auto; max-width: 900px;">
     <div class="card md-5" style="max-width: 900px;">
         <div class="row g-0">
             <div class="col-md-4">
                 {% if item.photo %}
-                    <img src="{{ item.photo.url }}" class="img-fluid rounded-start" alt="...">
+                    <img src="{{ news_item.photo.url }}" class="img-fluid rounded-start" alt="...">
                 {% else %}
                     <img src="" class="img-fluid rounded-start" alt="...">
                 {% endif %}
@@ -27,25 +26,18 @@
                 <div class="card-body">
                     <div class="card-header" style="margin:0 auto; background-color: lightcyan; margin-bottom: 5px; display: flex; justify-content: space-between">
                         <p style="margin: 0 auto; display: block">Категория: </p>
-                        <a style="text-decoration-skip-ink: auto;" href="{{ item.category.get_absolute_url }}">
+                        <a style="text-decoration-skip-ink: auto;" href="{{ news_item.category.get_absolute_url }}">
                             <button type="button" class="btn btn-outline-secondary btn-sm">
                                 {{ item.category }}
                             </button>
                         </a>
                     </div>
-                    <h5 class="card-title">{{ item.title }}</h5>
-                    <p class="card-text">{{ item.content|linebreaks|truncatewords:40 }}</p>
-                    <p class="card-text"><small class="text-muted">{{ item.created_at|date:"z-Y (l) H:i e" }}</small></p>
-                    <div class="div" style="display: flex; justify-content: end">
-                        <a style="text-decoration-skip-ink: auto;" href="{{ item.get_absolute_url }}">
-                            <button type="button" class="btn btn-primary btn-sm">Читать...</button>
-                        </a>
-
-                    </div>
+                    <h5 class="card-title">{{ news_item.title }}</h5>
+                    <p class="card-text">{{ news_item.content|linebreaks }}</p>
+                    <p class="card-text"><small class="text-muted">{{ news_item.created_at|date:"z-Y (l) H:i e" }}</small></p>
                 </div>
             </div>
         </div>
     </div>
     </div>
-    {% endfor %}
 {% endblock content %}
