--- a/test_one/templates/inc/_nav.html
+++ b/test_one/templates/inc/_nav.html
@@ -10,8 +10,8 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            Features
+                        <a class="nav-link" href="{% url 'post_news' %}">
+                            Добавить новость
                         </a>
                     </li>
                 </ul>
